<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="DefaultParameters" Id="{4975ba0a-01f7-4cdb-a2ac-96db5e0f2562}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK DefaultParameters
VAR_INPUT
	Pressure: ControllerParameters := ( SP := 150, SP_HighSpeed := 200, P := 0.02, I := T#2M );
	Flow: ControllerParameters := ( SP := 100, SP_HighSpeed := 100, P := 0.02, I := T#2M );
	SlaveFlow: ControllerParameters := ( SP := 100, SP_HighSpeed := 100, P := 0.02, I := T#2M );
	Const: ControllerParameters := ( SP := 100, SP_HighSpeed := 100, P := 0.02, I := T#2M );
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="DefaultParameters">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>